gateway/k8s/hc-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: habitcentric
  name: gateway
  labels:
    app: habitcentric
spec:
  replicas: 1
  selector:
    matchLabels:
      app: habitcentric
      component: gateway
  template:
    metadata:
      labels:
        app: habitcentric
        component: gateway
    spec:
      containers:
        - image: habitcentric/gateway:latest
          name: gateway
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
