gateway/k8s/hc-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: habitcentric
  name: gateway
spec:
  type: NodePort
  ports:
    - name: http-hcgateway
      port: 8419
      targetPort: 8080
  selector:
    app: habitcentric
    component: gateway
