gateway/k8s/hc-gateway-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: habitcentric
  name: gateway-ingress
spec:
  rules:
    - host: habitcentric.demo
      http:
        paths:
          - path: /
            backend:
              serviceName: gateway
              servicePort: 8419
          - path: /*
            backend:
              serviceName: gateway
              servicePort: 8419
